--- a/index.html
+++ b/index.html
@@ -8,42 +8,177 @@
     <link rel="icon" href="images/icon.png" type="image/png">
 </head>
 <body>
+<input type="checkbox" id="theme-toggle">
 
 <header>
     <nav class="navbar">
-        <div class="logo">Malahim</div>
-        <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="burger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
+    <div class="logo">Malahim</div>
 
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+   <div class="theme-toggle-wrapper">
+    <span class="theme-label">Dark</span>
+    <label for="theme-toggle" class="theme-btn"></label>
+</div>
+
+
+
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
+
+    <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
 </header>
 
 <main>
-    <section id="home">
-        <h1>Home Section</h1>
-        <p>Welcome to my website. Scroll down to see other sections.</p>
+   <section id="home">
+        <div class="part">
+            <div>
+                <img src="images/pp.jpeg" alt="Profile Picture" class="profile-pic">
+            </div>
+            <div class="home-info">
+                <h1>Hi, I'm Malahim.</h1>
+                <p>I am a Computer Science student in my 6th semester with strong programming skills and a passion for problem-solving. I am eager to contribute to innovative software solutions through creativity and continuous learning.</p>
+
+               <div class="social-links">
+                    <a href="mailto:malahimch2006@gmail.com" target="_blank" title="Gmail">
+                        <img src="images/gmail.png" alt="Gmail" />
+                    </a>
+                    <a href="https://github.com/MalahimCh" target="_blank" title="GitHub">
+                        <img src="images/github.png" alt="GitHub" />
+                    </a>
+                    <a href="https://www.linkedin.com/in/malahim-chaudhary-6b3404284/" target="_blank" title="LinkedIn">
+                        <img src="images/linkedin.png" alt="LinkedIn" />
+                    </a>
+                </div>
+
+                <div class="home-actions">
+                    <button class="download-btn" onclick="window.open('files/CV.pdf', '_blank')">Download Resume</button>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section id="about">
-        <h1>About Section</h1>
-        <p>Information about me or my company.</p>
-    </section>
+<section id="education">
+    <div class="vertical">
+        <h1>Education</h1>
+        <div class="edu-list">
+            <div class="edu-item">
+                <p>2023 - 2027</p>
+                <div class="edu-descrip">
+                    <h4>Bachelor of Computer Science</h4>
+                    <p>FAST NUCES</p>
+                </div>
 
-    <section id="services">
-        <h1>Services Section</h1>
-        <p>List of services or features offered.</p>
-    </section>
+            </div>
+            <div class="edu-item">
+                <p>2021 - 2023</p>
+                 <div class="edu-descrip">
+                    <h4>Higher Secondary Education</h4>
+                    <p>Kips College</p>
+                </div>
+            </div>
+            <div class="edu-item">
+                <p>2019 - 2021</p>
+                 <div class="edu-descrip">
+                    <h4>Secondary Education</h4>
+                    <p>The Punjab School</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+   <section id="projects">
+  <div class="vertical">
+    <h1>Projects</h1>
+    <div class="project-list">
+
+      <div class="project-item">
+        <div class="project-time">
+          <p>Oct-Dec<br>2025</p>
+        </div>
+        <div class="project-card">
+          <h4>Tickit</h4>
+          <p class="inst">FAST-NUCES (5th Semester)</p>
+          <p>WPF-based desktop bus reservation system with booking, ticketing, customer support, and real-time notifications.</p>
+          <p class="tech">Technical Summary: .NET, C#, WPF, Desktop Application Development, Real-Time Notifications, Email Integration</p>
+        </div>
+      </div>
+
+      <div class="project-item">
+        <div class="project-time">
+          <p>Jun-Aug<br>2025</p>
+        </div>
+        <div class="project-card">
+          <h4>Timetable Automation & Scheduling System</h4>
+          <p class="inst">FAST-NUCES (Summer Internship)</p>
+          <p>Automated timetable system with Excel–web synchronization; preliminary generative AI integration</p>
+          <p class="tech">Technical Summary: React.js, Vite, JavaScript, Excel–Web Integration, Clash Logic, Generative AI (Exploratory), Vercel</p>
+        </div>
+      </div>
+
+      <div class="project-item">
+        <div class="project-time">
+          <p>Feb-May<br>2025</p>
+        </div>
+        <div class="project-card">
+          <h4>NUCES Track</h4>
+          <p class="inst">FAST-NUCES (4th Semester)</p>
+          <p>An inventory management system to handle stock, billing and support real-time tracking and reporting.</p>
+          <p class="tech">Technical Summary: React.js, Node.js, MSSQL, JavaScript, HTML, CSS</p>
+        </div>
+      </div>
+
+      <div class="project-item">
+        <div class="project-time">
+          <p>Oct-Dec<br>2024</p>
+        </div>
+        <div class="project-card">
+          <h4>Flapistein</h4>
+          <p class="inst">FAST-NUCES (3rd Semester)</p>
+          <p>A Flappy Bird-style game to explore low-level system operations, multitasking, and hardware-level graphics.</p>
+          <p class="tech">Technical Summary: Assembly Language, VGA, Interrupts</p>
+        </div>
+      </div>
+
+      <div class="project-item">
+        <div class="project-time">
+          <p>Feb-May<br>2024</p>
+        </div>
+        <div class="project-card">
+          <h4>BiteBliss</h4>
+          <p class="inst">FAST-NUCES (2nd Semester)</p>
+          <p>A social cooking app with recipe sharing, challenges, and timers to boost culinary creativity and engagement.</p>
+          <p class="tech">Technical Summary: C++, OOP, Data Management</p>
+        </div>
+      </div>
+
+      <div class="project-item">
+        <div class="project-time">
+          <p>Oct-Dec<br>2023</p>
+        </div>
+        <div class="project-card">
+          <h4>Sugar Smash</h4>
+          <p class="inst">FAST-NUCES (1st Semester)</p>
+          <p>A desktop game inspired by Candy Crush, focusing on core gameplay mechanics and user interface.</p>
+          <p class="tech">Technical Summary: C++, SFML</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
     <section id="contact">
         <h1>Contact Section</h1>
@@ -52,8 +187,22 @@
 </main>
 
 <footer>
+
     <p>&copy; 2024 My Website. All rights reserved.</p>
+    
+    <div class="social-links">
+        <a href="mailto:malahimch2006@gmail.com" target="_blank" title="Gmail">
+            <img src="images/gmail.png" alt="Gmail" />
+        </a>
+        <a href="https://github.com/MalahimCh" target="_blank" title="GitHub">
+            <img src="images/github.png" alt="GitHub" />
+        </a>
+        <a href="https://www.linkedin.com/in/malahim-chaudhary-6b3404284/" target="_blank" title="LinkedIn">
+            <img src="images/linkedin.png" alt="LinkedIn" />
+        </a>
+    </div>
 </footer>
+
 
 </body>
 </html>
