--- a/index.html
+++ b/index.html
@@ -48,17 +48,20 @@
                 <h1>Hi, I'm Malahim.</h1>
                 <p>I am a Computer Science student in my 6th semester with strong programming skills and a passion for problem-solving. I am eager to contribute to innovative software solutions through creativity and continuous learning.</p>
 
-               <div class="social-links">
-                    <a href="mailto:malahimch2006@gmail.com" target="_blank" title="Gmail">
-                        <img src="images/gmail.png" alt="Gmail" />
-                    </a>
-                    <a href="https://github.com/MalahimCh" target="_blank" title="GitHub">
-                        <img src="images/github.png" alt="GitHub" />
-                    </a>
-                    <a href="https://www.linkedin.com/in/malahim-chaudhary-6b3404284/" target="_blank" title="LinkedIn">
-                        <img src="images/linkedin.png" alt="LinkedIn" />
-                    </a>
-                </div>
+            <div class="social-links">
+    <a href="mailto:malahimch2006@gmail.com" target="_blank" title="Gmail">
+        <img class="icon-light" src="images/mail_light.png" alt="Gmail" />
+        <img class="icon-dark" src="images/mail_dark.png" alt="Gmail" />
+    </a>
+    <a href="https://github.com/MalahimCh" target="_blank" title="GitHub">
+        <img class="icon-light" src="images/git_light.png" alt="GitHub" />
+        <img class="icon-dark" src="images/git_dark.png" alt="GitHub" />
+    </a>
+    <a href="https://www.linkedin.com/in/malahim-chaudhary-6b3404284/" target="_blank" title="LinkedIn">
+        <img class="icon-light" src="images/linkedin_light.png" alt="LinkedIn" />
+        <img class="icon-dark" src="images/linkedin_dark.png" alt="LinkedIn" />
+    </a>
+</div>
 
                 <div class="home-actions">
                     <button class="download-btn" onclick="window.open('files/CV.pdf', '_blank')">Download Resume</button>
@@ -180,27 +183,35 @@
   </div>
 </section>
 
-    <section id="contact">
-        <h1>Contact Section</h1>
-        <p>Contact form or contact info goes here.</p>
-    </section>
+   <section id="contact">
+    <h1>Contact Me</h1>
+    <form action="https://formspree.io/f/mdalknbg" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
 </main>
 
 <footer>
 
-    <p>&copy; 2024 My Website. All rights reserved.</p>
+    <p>&copy; 2026 Portfolio. All rights reserved.</p>
     
-    <div class="social-links">
-        <a href="mailto:malahimch2006@gmail.com" target="_blank" title="Gmail">
-            <img src="images/gmail.png" alt="Gmail" />
-        </a>
-        <a href="https://github.com/MalahimCh" target="_blank" title="GitHub">
-            <img src="images/github.png" alt="GitHub" />
-        </a>
-        <a href="https://www.linkedin.com/in/malahim-chaudhary-6b3404284/" target="_blank" title="LinkedIn">
-            <img src="images/linkedin.png" alt="LinkedIn" />
-        </a>
-    </div>
+   <div class="social-links">
+    <a href="mailto:malahimch2006@gmail.com" target="_blank" title="Gmail">
+        <img class="icon-light" src="images/mail_light.png" alt="Gmail" />
+        <img class="icon-dark" src="images/mail_dark.png" alt="Gmail" />
+    </a>
+    <a href="https://github.com/MalahimCh" target="_blank" title="GitHub">
+        <img class="icon-light" src="images/git_light.png" alt="GitHub" />
+        <img class="icon-dark" src="images/git_dark.png" alt="GitHub" />
+    </a>
+    <a href="https://www.linkedin.com/in/malahim-chaudhary-6b3404284/" target="_blank" title="LinkedIn">
+        <img class="icon-light" src="images/linkedin_light.png" alt="LinkedIn" />
+        <img class="icon-dark" src="images/linkedin_dark.png" alt="LinkedIn" />
+    </a>
+</div>
 </footer>
 
 
